# legSim

./: README.md
leg_sim/: CMakeLists.txt  package.xml
leg_sim/config/: one_leg.yaml
leg_sim/launch/: gazebo.launch  leg_sim_basic.launch  leg_sim_rviz.launch
leg_sim/rviz/: one_leg_test.rviz
leg_sim/src/: height_ik.cpp  height_test.cpp  loco_angle_ik.cpp
leg_sim/urdf/: one_leg_basic.urdf
